--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mongoose": "^6.0.5",
     "nodemon": "^2.0.12",
     "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "jest": "^27.1.1"
   }
 }
